# DraftInk

./: .gitignore  LICENSE  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.e2e.json  vitest.config.ts  wdio.conf.ts
.github/workflows/: ci.yml  release.yml
e2e/: 01-app-launch.spec.ts  02-freehand-drawing.spec.ts  03-board-management.spec.ts  04-save-open-file.spec.ts  05-export-png.spec.ts  06-undo-redo.spec.ts  07-theme-switching.spec.ts  helpers.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/__tests__/: Toolbar.test.tsx  boardStore.test.ts  clipboard.test.ts  connectors.test.ts  documentStore.test.ts  fileStore.test.ts  historyStore.test.ts  hitTest.test.ts  quadtree.test.ts  setup.ts  smoothing.test.ts  snapping.test.ts  themeStore.test.ts  viewport.test.ts
src/canvas/: InfiniteCanvas.tsx  connectors.ts  grid.ts  hitTest.ts  quadtree.ts  renderElements.ts  renderSelection.ts  smoothing.ts  snapping.ts  useViewport.ts  viewport.ts
src/components/: BoardPanel.tsx  Canvas.tsx  ContextMenu.tsx  HomeScreen.tsx  Minimap.tsx  PresentationControls.tsx  SearchPanel.tsx  SettingsPanel.tsx  ShortcutsOverlay.tsx  TemplateGallery.tsx  Toolbar.tsx  TopBar.tsx  UndoToast.tsx  UpdateChecker.tsx
src/hooks/: useKeyboardShortcuts.ts  useTrayEvents.ts
src/store/: boardStore.ts  documentStore.ts  fileStore.ts  historyStore.ts  searchStore.ts  settingsStore.ts  themeStore.ts  toolStore.ts  viewportUIStore.ts
(+5 files in other folders)
