[package]
name = "draftink"
version = "0.1.0"
description = "A lightweight, offline-first whiteboard application"
authors = ["David Elvar"]
license = "MIT"
repository = "https://github.com/davidelvar/DraftInk"
edition = "2021"

[lib]
name = "draftink_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png", "tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
dirs = "6"
